# Timer-Fix-plugin

./: CMakeLists.txt  LICENSE  Makefile  README.MD  core.cpp  exports.def  main.cpp  main.h  makefile  natives.cpp  natives.h  pawn.json  precompilied.h  timer.cpp  timer.h  timerfix.vcxproj  timerfix.vcxproj.filters
include/: timerfix.inc
lib/amx/: amx.h  amx2.h
lib/lwm/: pointer.h
lib/sdk/: amxplugin2.cpp
lib/sdk/amx/: amx.h  amx2.h
src/: CCallback.cpp  CCallback.h  CCore.cpp  CCore.h  CFreeSlotManager.h  CNatives.cpp  CNatives.h  COSTime.cpp  COSTime.h  CServerHooks.cpp  CServerHooks.h  CSingleton.h  CStorage.cpp  CStorage.h  CTimer.cpp  CTimer.h  CTimerManager.cpp  CTimerManager.h  Config.h  Console.cpp  Console.h  Definitions.h  FreeSlotManager.cpp  FreeSlotManager.h  ID.cpp  ID.h  Logic.cpp  Logic.h  Pawn.cpp  Pawn.h  PawnString.cpp  PawnString.h  System.cpp  System.h  Time.cpp  Time.h  Timer.cpp  Timer.hpp  TimerManager.cpp  TimerManager.h  (+37 more)
src/amx/: amx2.h
src/lib/amx/: amx2.h
tests/: receiving_error.pwn
